--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
       <header id="app-header" class="app-header">
         <div class="header-inner">
           <div class="brand-block">
+            <img src="/logo.jpg" alt="Marvel Hub logo" class="brand-logo" />
             <h1>Marvel Hub</h1>
           </div>
 
