--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,13 @@
       <header id="app-header" class="app-header">
         <div class="header-inner">
           <div class="brand-block">
-            <img src="/logo.jpg" alt="Marvel Hub logo" class="brand-logo" />
+            <img
+              src="/logo.jpg"
+              alt="Marvel Hub logo"
+              width="40"
+              height="40"
+              style="margin-right: 10px; border-radius: 10px; object-fit: cover"
+            />
             <h1>Marvel Hub</h1>
           </div>
 
